--- a/Core.Persistence/Core.Persistence.csproj
+++ b/Core.Persistence/Core.Persistence.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>9571c43c-e02d-4e3b-b1a7-67f9481f5aed</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
