Adding Rate Limit Check

--- a/Core.Api/appsettings.Development.json
+++ b/Core.Api/appsettings.Development.json
@@ -23,6 +23,17 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Server=localhost;Database=DiagnoseMeDb;Uid=DiagnoseMe;Pwd=DiagnoseMe"
+  },
+  "IpRateLimitingSettings": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "60s",
+        "Limit": 20
+      }
+    ]
   }
-  
 }
