--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       - Debug:ShowHost=true
     networks:
       - gateway
+    volumes:
+      - ./DiagnoseMe.GateWay:/src/DiagnoseMe.GateWay
+      - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
     entrypoint: dotnet run 
   authapi:
     container_name: auth-api
@@ -41,7 +44,7 @@ services:
       - authapi-authdb
       - gateway
     volumes:
-      - ./DiagnoseMe.MicroServices/Auth:/src
+      - ./DiagnoseMe.MicroServices/Auth:/src/DiagnoseMe.MicroServices/Auth/Auth.Api
       - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
     entrypoint: dotnet run
   authdb:
@@ -84,7 +87,7 @@ services:
       - gateway
       - medicalblogapi-medicalblogdb
     volumes:
-      - ./DiagnoseMe.MicroServices/MedicalBlog:/src
+      - ./DiagnoseMe.MicroServices/MedicalBlog:/src/DiagnoseMe.MicroServices/MedicalBlog/MedicalBlog.Api
       - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
     entrypoint: dotnet run
   medicalblogdb:
@@ -127,7 +130,7 @@ services:
       - gateway
       - blooddonationapi-blooddonationdb
     volumes:
-      - ./DiagnoseMe.MicroServices/BloodDonation:/src
+      - ./DiagnoseMe.MicroServices/BloodDonation:/src/DiagnoseMe.MicroServices/BloodDonation/BloodDonation.Api
       - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
     entrypoint: dotnet run
   blooddonationdb:
