--- a/DiagnoseMe.MicroServices/MedicalBlog/MedicalBlog.Api/appsettings.Development.json
+++ b/DiagnoseMe.MicroServices/MedicalBlog/MedicalBlog.Api/appsettings.Development.json
@@ -25,8 +25,11 @@
         "Limit": 20
       }
     ],
-    "Ipwhitelist": [
-      "127.0.0.1"
+    "Ipwhitelist": []
+  },
+  "IpRateLimitingExtraOptions": {
+    "HostWhiteList":[
+      "gateway.diagnose.me"
     ]
   }
 }
