--- a/DiagnoseMe.MicroServices/Auth/Auth.Api/appsettings.Development.json
+++ b/DiagnoseMe.MicroServices/Auth/Auth.Api/appsettings.Development.json
@@ -32,8 +32,13 @@
         "Limit": 20
       }
     ],
-    "Ipwhitelist": [
-      "0.0.0.0"
+    "IpWhitelist": [
+    ]
+  },
+  "IpRateLimitingExtraOptions": {
+    "HostWhiteList":[
+      "gateway.diagnose.me"
     ]
   }
+  
 }
