--- a/DiagnoseMe.MicroServices/MedicalBlog/MedicalBlog.Api/Dockerfile
+++ b/DiagnoseMe.MicroServices/MedicalBlog/MedicalBlog.Api/Dockerfile
@@ -3,6 +3,8 @@ WORKDIR /app
 EXPOSE 7131
 
 ENV ASPNETCORE_URLS=http://+:7131
+ENV ASPNETCORE_ENVIRONMENT=Development
+ENV ConnectionStrings__DefaultConnection="Server=medicalblogdb;Database=MedicalBlogDb;Uid=DiagnoseMe;Pwd=DiagnoseMe"
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
 # For more info, please refer to https://aka.ms/vscode-docker-dotnet-configure-containers
